compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_stringn_ty_wrong_type_size.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type _ : string(1.0)"

---
"_"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of string_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 16..19: mismatched types
| note in file FileId(1) for 16..19: this is of type `real`
| info: `real` is not an integer type
