compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_args_err_few.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "procedure boop(a, b, c : int) end boop\nboop(1, 2)\nboop(1)\n"
---
"boop"@(FileId(1), 10..14) [Subprogram(Procedure)]: procedure ( pass(value) int, pass(value) int, pass(value) int, ) -> void
"a"@(FileId(1), 15..16) [Param(Value, No)]: int
"b"@(FileId(1), 18..19) [Param(Value, No)]: int
"c"@(FileId(1), 21..22) [Param(Value, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 39..43: expected 3 arguments, found 2
| error in file FileId(1) for 39..43: call is missing 1 argument
error in file FileId(1) at 50..54: expected 3 arguments, found 1
| error in file FileId(1) for 50..54: call is missing 2 arguments
