compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_args_err_many.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "procedure boop(a, b, c : int) end boop\nboop(1, 2, 3, 4)\nboop(1, 2, 3, 4, 5)\n"
---
"boop"@(FileId(1), 10..14) [Declared]: procedure ( pass(value) int, pass(value) int, pass(value) int, ) -> void
"<unnamed>"@(dummy) [Undeclared]: <error>
"a"@(FileId(1), 15..16) [Declared]: int
"b"@(FileId(1), 18..19) [Declared]: int
"c"@(FileId(1), 21..22) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 39..43: expected 3 arguments, found 4
| error in file FileId(1) for 39..43: call has 1 extra argument
error in file FileId(1) at 56..60: expected 3 arguments, found 5
| error in file FileId(1) for 56..60: call has 2 extra arguments
