compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_args_err_not_expr.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type a : int\nprocedure boop(a, b : int, var c : int) end boop\nboop(1, a, a)\n"
---
"a"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"boop"@(FileId(1), 23..27) [Declared]: procedure ( pass(value) int, pass(value) int, pass(var ref) int, ) -> void
"<unnamed>"@(dummy) [Undeclared]: <error>
"a"@(FileId(1), 28..29) [Declared]: int
"b"@(FileId(1), 31..32) [Declared]: int
"c"@(FileId(1), 44..45) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 70..71: cannot pass `a` to this parameter
| error in file FileId(1) for 70..71: `a` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `a` declared here
error in file FileId(1) at 73..74: cannot pass `a` to this parameter
| error in file FileId(1) for 73..74: `a` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `a` declared here
