compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_args_err_wrong_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var tree : string\nprocedure boop(a, b : int, var c : int) end boop\nboop(1, 2, tree)\n"
---
"tree"@(FileId(1), 4..8) [ConstVar(Var, No)]: string
"boop"@(FileId(1), 28..32) [Subprogram(Procedure)]: procedure ( pass(value) int, pass(value) int, pass(var ref) int, ) -> void
"<unnamed>"@(dummy) [Undeclared]: <error>
"a"@(FileId(1), 33..34) [Param(Value, No)]: int
"b"@(FileId(1), 36..37) [Param(Value, No)]: int
"c"@(FileId(1), 49..50) [Param(Reference(Var), No)]: int
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 78..82: mismatched types
| note in file FileId(1) for 78..82: this is of type `string`
| note in file FileId(1) for 78..82: parameter expects type `int`
| info: `string` is not equivalent to `int`
