compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_args_exact.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var tree : int\nprocedure boop(a, b : int, var c : int) end boop\nboop(1, 2, tree)\n"
---
"tree"@(FileId(1), 4..8) [ConstVar(Var, No)]: int
"boop"@(FileId(1), 25..29) [Subprogram(Procedure)]: procedure ( pass(value) int, pass(value) int, pass(var ref) int, ) -> void
"a"@(FileId(1), 30..31) [Param(Value, No)]: int
"b"@(FileId(1), 33..34) [Param(Value, No)]: int
"c"@(FileId(1), 46..47) [Param(Reference(Var), No)]: int
"<root>"@(dummy) [Module(No)]: <error>

